--- a/res/xml/places.xml
+++ b/res/xml/places.xml
@@ -7,26 +7,28 @@
         bg="place_castellazzo_bg"
         latlng="45.465090, 7.872041"
         minigame="PredaInDora"
-        minigame_mask="podesta"
         minigame_bg="predaindora_bg"
         minigame_descr="Il Podestà era il supremo capo del governo del Comune, nominato ogni anno dai Credendari, i “senatori” della Città.
 Quando entrava in carica, svolgeva la cerimonia chiamata Preda in Dora: andava a prelevare, con un apposito martello conservato in Comune, un sasso tra i ruderi del Castellazzo e lo gettava in Dora in spregio al Marchese del Monferrato.
 
-Il giocatore può scegliere fra 3 sassi dei ruderi per colpirlo con il suo martello. Un numero diverso di arance è nascosto sotto ciascun sasso. Il giocatore vincerà il numero di arance corrispondente al sasso scelto." />
+Il giocatore può scegliere fra 3 sassi dei ruderi per colpirlo con il suo martello. Un numero diverso di arance è nascosto sotto ciascun sasso. Il giocatore vincerà il numero di arance corrispondente al sasso scelto."
+        minigame_mask="podesta" />
     <place
         id="2"
         name="Piazza di Città"
         bg="place_piazzadicitta_bg"
-        minigame_mask="mugnaia"
-        latlng="45.466779, 7.875750" />
+        latlng="45.466779, 7.875750"
+        minigame="PredaInDora"
+        minigame_mask="mugnaia" />
     <place
         id="3"
         name="Piazza Maretta"
+        bg="place_maretta_bg"
         latlng="45.465872, 7.871290"
         minigame="Fagiolata"
-        minigame_mask="profile"
         minigame_bg="predaindora_bg"
-        minigame_descr="Se sei loggato su Facebook o su Google, puoi donare ai tuoi amici un set di 10 arance." />
+        minigame_descr="Se sei loggato su Facebook o su Google, puoi donare ai tuoi amici un set di 10 arance."
+        minigame_mask="fagiolata" />
     <place
         id="4"
         name="Borghetto"
