--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -23,5 +23,6 @@
     <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
+    <color name="fagiolata_gray">#ff333333</color>
 
 </resources>
