--- a/res/layout/start_minigame_activity.xml
+++ b/res/layout/start_minigame_activity.xml
@@ -18,10 +18,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="80"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:padding="5dp" >
 
             <ImageView
                 android:id="@+id/character2"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="14dp"
@@ -34,9 +36,11 @@
                 android:layout_height="152dp"
                 android:layout_gravity="center_vertical"
                 android:background="#99000000"
-                android:text="Descr goes here"
+                android:padding="8dp"
+                android:text="@string/ivrea_map_button_minigame"
                 android:textColor="@android:color/white"
                 android:textStyle="italic" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -51,7 +55,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/orange_button"
                 android:onClick="play"
-                android:text="Comincia" />
+                android:text="@string/start_minigame" />
 
             <LinearLayout
                 android:id="@+id/linearLayout1"
@@ -62,7 +66,7 @@
                     android:id="@+id/mgTimerTextA"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Prossima partita tra"
+                    android:text="@string/next_game_in"
                     android:textColor="@android:color/white" />
 
                 <TextView
@@ -91,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="false"
         android:src="@drawable/podesta" />
 
 </RelativeLayout>
