--- a/res/xml/places.xml
+++ b/res/xml/places.xml
@@ -55,7 +55,11 @@ Il giocatore dovrà raccogliere più mimose e caramelle possibili muovendo il pr
     <place
         id="8"
         name="Piazza Duomo"
-        latlng="45.468433, 7.875700" />
+        latlng="45.468433, 7.875700"
+        minigame="MainQuizActivity"
+        minigame_descr="Quiz sulla storia del duomo"
+        minigame_mask="sost_gran_canc"
+         />
     <place
         id="9"
         name="Piazza Castello"
