piccolo aggiustamento grafico

--- a/res/layout/score_update_activity.xml
+++ b/res/layout/score_update_activity.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:gravity="right"
         android:minEms="3"
         android:text="200.000"
         android:textAppearance="?android:attr/textAppearanceMedium"
