--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="app_id">121041686955</string>
     <string name="google_maps_api">AIzaSyDsaEtYuW0yTtlu1nn63XvI7ouhY0y1BIE</string>
-    <string name="aranceri_leaderboards">CgkIlI3O9ZYdEAIQAQ</string>
+    <string name="aranceri_leaderboards">CgkIq6OW9cIDEAIQAQ</string>
 </resources>
