--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/predaindora_bg"
+            android:id="@+id/home_bg"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="6"
@@ -26,10 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:padding="35dp"
+            android:padding="20dp"
             android:text="@string/app_name"
             android:textColor="@color/ivreaGray"
-            android:textSize="50sp"
+            android:textSize="40sp"
             geekui:customTypeface="fonts/rumpelstiltskin.ttf" />
     </LinearLayout>
 
