--- a/res/layout/place_activity.xml
+++ b/res/layout/place_activity.xml
@@ -19,7 +19,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/place_castellazzo_bg"
-        android:scaleType="fitEnd" />
+        android:scaleType="centerCrop"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/baloon" >
+                    android:background="@drawable/balloon" >
 
                     <com.mobsandgeeks.ui.TypefaceTextView
                         android:id="@+id/balloonMiniGame"
