--- a/res/xml/places.xml
+++ b/res/xml/places.xml
@@ -38,6 +38,7 @@ Il giocatore dovrà raccogliere più mimose e caramelle possibili muovendo il pr
     <place
         id="5"
         name="Piazza Freguglia"
+        bg="place_freguglia_bg"
         latlng="45.466290, 7.881392" />
     <place
         id="6"
@@ -45,28 +46,33 @@ Il giocatore dovrà raccogliere più mimose e caramelle possibili muovendo il pr
         bg="place_rondolino_bg"
         latlng="45.465506, 7.881005" 
         minigame="LibroVerbali"
+        minigame_bg = "place_rondolino_bg"
         minigame_descr="Il Sostituto Gran Cancelliere ha il compito di redigere e certificare i processi verbali del Carnevale in un apposito Libro. è sempre presente a ogni atto ufficiale per poterne dare precisa testimonianza."
         minigame_mask="sost_gran_canc"
         />
     <place
         id="7"
         name="Piazza Ottinetti"
+        bg="place_ottinetti_bg"
         latlng="45.467436, 7.878425" />
     <place
         id="8"
         name="Piazza Duomo"
+        bg="place_under_construction_bg"
         latlng="45.468433, 7.875700" />
     <place
         id="9"
         name="Piazza Castello"
         bg="place_castello_bg"
-        minigame="PredaInDora"
+        minigame="UnderConstruction"
+        minigame_bg="place_under_construction_bg"
         minigame_descr="Il Generale conserva il regolamento"
         minigame_mask="generale"
         latlng="45.467721, 7.874919" />
     <place
         id="10"
         name="Via Palma"
+        bg="place_under_construction_bg"
         latlng="45.467134, 7.874530" />
 
 </places>
