--- a/res/layout/score_update_activity.xml
+++ b/res/layout/score_update_activity.xml
@@ -67,4 +67,22 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="50sp" />
 
+    
+        <RelativeLayout
+        android:id="@+id/progressLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="#AAAAAAAA" >
+
+        <ProgressBar
+            android:id="@+id/progress_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
+    
 </RelativeLayout>
