--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,9 +15,8 @@
 
         <ImageView
             android:id="@+id/home_bg"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="6"
+            android:layout_width="902dp"
+            android:layout_height="605dp"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
             android:src="@drawable/home_bg" />
