--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,22 +8,30 @@
     android:gravity="center"
     tools:context=".MainActivity" >
 
+    <ImageView
+        android:id="@+id/home_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        android:src="@drawable/home_bg" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/home_bg"
-            android:layout_width="902dp"
-            android:layout_height="605dp"
-            android:contentDescription="@string/app_name"
-            android:scaleType="centerCrop"
-            android:src="@drawable/home_bg" />
 
         <com.mobsandgeeks.ui.TypefaceTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:padding="20dp"
             android:text="@string/app_name"
